--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "mongodb": "^1.4.8",
     "request": "^2.34.0",
     "underscore": "^1.6.0",
+    "uuid": "^1.4.1",
     "validator": "^3.5.0",
     "winston": "~0.7.*"
   },
   "devDependencies": {
     "should": "latest",
     "supertest": "latest",
-    "node-uuid": "latest",
     "assert": "latest"
   },
   "engines": {
