--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/bridgeit/bridgeit-common"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "bcrypt-nodejs": "~0.0.3",
     "jsonschema": "1.0.0",
     "lodash": "^3.1.0",
@@ -32,7 +33,6 @@
     "winston": "~0.7.*"
   },
   "devDependencies": {
-    "assert": "latest",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.3.0",
     "should": "latest",
