--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "underscore": "^1.6.0",
     "uuid": "^1.4.1",
     "validator": "^3.5.0",
-    "winston": "~0.7.*"
+    "winston": "~0.7",
+    "zlib": "1.0.5"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
