--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonschema": "1.0.0",
     "lodash": "^3.1.0",
     "mongodb": "^1.4.33",
+    "mqtt": "^1.2.1",
     "request": "^2.53.0",
     "superagent": "^0.21.0",
     "underscore": "^1.6.0",
