--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "bcrypt-nodejs": "~0.0.3",
+    "ioredis": "^1.5.1",
     "jsonschema": "1.0.0",
     "lodash": "^3.1.0",
     "mongodb": "^1.4.33",
