--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt-nodejs": "~0.0.3",
     "ioredis": "^1.5.1",
     "jsonschema": "1.0.0",
+    "json-templater": "^1.0.2",
     "lodash": "^3.1.0",
     "mongodb": "2.0.42",
     "mqtt": "^1.2.1",
