--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "bridgeit-common",
-  "version": "0.1.5",
-  "description": "BridgeIt Common Module.  Common utilities, configurations, and functions for BridgeIt Services.",
+  "name": "voyent-common",
+  "version": "0.1.6",
+  "description": "Voyent Common Module.  Common utilities, configurations, and functions for Voyent Services.",
   "author": "ICEsoft Technologies Inc.",
-  "keywords": "bridgeit service common tools utilities",
-  "homepage": "http://bridgeit.mobi/",
-  "bugs": {
-    "url": "http://bridgeit.mobi/forum/",
-    "email": "bridgeit@icesoft.com"
-  },
+  "keywords": "voyent service common tools utilities",
+  "homepage": "http://voyent.cloud/",
   "license": "Apache-2.0",
   "main": "index",
   "directories": {
@@ -17,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bridgeit/bridgeit-common"
+    "url": "https://github.com/Voyent/voyent-common"
   },
   "dependencies": {
     "async": "^0.9.0",
