--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "underscore": "^1.6.0",
     "uuid": "^1.4.1",
     "validator": "^3.5.0",
-    "winston": "~0.7"
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
