--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "async": "^0.9.0",
     "bcrypt-nodejs": "~0.0.3",
     "ioredis": "^1.5.1",
-    "jsonschema": "1.0.0",
     "json-templater": "^1.0.2",
-    "lodash": "^3.1.0",
-    "mongodb": "2.1.4",
+    "jsonschema": "1.0.0",
+    "lodash": "^4.17.0",
+    "mongodb": "^2.2.25",
     "mqtt": "^1.2.1",
     "request": "^2.53.0",
     "rx": "^2.5.3",
@@ -29,7 +29,7 @@
     "underscore": "^1.6.0",
     "uuid": "^1.4.1",
     "validator": "^3.5.0",
-    "winston": "^2.2.0"
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
