--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "aws-sdk": "^2.292.0",
     "bcrypt-nodejs": "~0.0.3",
     "ioredis": "^1.5.1",
     "json-templater": "^1.0.2",
