--- a/package.json
+++ b/package.json
@@ -20,24 +20,18 @@
     "bcrypt-nodejs": "~0.0.3",
     "json-templater": "^1.0.2",
     "jsonschema": "1.1.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.13",
     "mongodb": "^2.2.25",
     "mongodb-uri": "^0.9.7",
     "request": "^2.53.0",
-    "superagent": "^0.21.0",
+    "superagent": "^5.1.0",
     "underscore": "^1.6.0",
     "uuid": "^1.4.1",
     "validator": "^3.5.0",
     "winston": "^2.4.4"
   },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bump": "^0.3.0",
-    "should": "latest",
-    "supertest": "latest"
-  },
   "engines": {
-    "node": ">=0.10.x"
+    "node": ">=8.0.0"
   },
   "private": false
 }
