VRAS-994: add new dependencies for cloud module

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "json-templater": "^1.0.2",
     "jsonschema": "1.1.1",
     "lodash": "^4.17.13",
+    "moment-timezone": "^0.5.26",
     "mongodb": "^2.2.25",
     "mongodb-uri": "^0.9.7",
+    "node-object-hash": "^2.0.0",
     "request": "^2.53.0",
     "superagent": "^5.1.0",
     "underscore": "^1.6.0",
